@@ -1,5 +1,16 @@
 
 
+                CHANGES IN party VERSION 1.3-0 (2018-03-26)
+
+    o    New scale argument for predict(<cforest>, scale = TRUE, ...).
+         For simple regression forests, predicting
+         the conditional mean by nearest neighbor weights with
+         scale = TRUE is now
+         equivalent to the aggregation of means. The unscaled version
+         proposed in <doi:10.1002/sim.1593> can be obtained with
+         scale = FALSE.}
+
+
                 CHANGES IN party VERSION 1.2-4 (2017-12-13)
 
     o    Bonferroni sometimes overcorrected (by taking constant variables into account). 
